feat: Completed all the section

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#">Portfolio</a></li>
           <li><a href="#about">About</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#testimonials">Testimonial</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -53,8 +54,50 @@
         </div>
       </div>
     </section>
+
+    <section id="services">
+      <div class="section-title">My Services</div>
+      <div class="container">
+        <div class="service-list">
+          <div>
+            <i class="fa-solid fa-code"></i>
+            <h2>Web Development</h2>
+            <p>
+              I have experience designing and developing web applications using
+              JavaScript frameworks like Node.js, React.js, and Angular.js. I
+              can build custom web applications from scratch or work with
+              existing codebases to create responsive, high-performance
+              applications.
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+          <div>
+            <i class="fa-solid fa-gears"></i>
+            <h2>API development</h2>
+            <p>
+              I am proficient in developing and maintaining APIs for web
+              applications. I can implement RESTful APIs using Node.js,
+              Express.js, and other technologies to enable seamless
+              communication between front-end and back-end components.
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+          <div>
+            <i class="fa-solid fa-screwdriver-wrench"></i>
+            <h2>Maintenance and support</h2>
+            <p>
+              I can provide ongoing maintenance and support for web
+              applications, including fixing bugs, adding new features, and
+              addressing security concerns. I can work closely with clients to
+              ensure their applications are running smoothly and efficiently.
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <section id="about">
-      <div class="about-title">About me</div>
+      <div class="section-title">About me</div>
       <div class="container">
         <div class="about-grid">
           <div class="about-content">
@@ -171,195 +214,199 @@
         </div>
       </div>
     </section>
-    <section id="services">
-      <div class="service-title">My Services</div>
+    <section id="portfolio">
+      <div class="section-title">My Work</div>
       <div class="container">
-        <div class="service-list">
-          <div>
-            <i class="fa-solid fa-code"></i>
-            <h2>Web Development</h2>
-            <p>
-              I have experience designing and developing web applications using
-              JavaScript frameworks like Node.js, React.js, and Angular.js. I
-              can build custom web applications from scratch or work with
-              existing codebases to create responsive, high-performance
-              applications.
-            </p>
-            <a href="#">Learn more</a>
+        <div class="work-list">
+          <div class="work">
+            <img src="/assets/images/work-1.png" alt="" />
+            <div class="layer">
+              <h3>Scientific Calculator</h3>
+              <p>
+                I have develop a scientific calculator as my project that
+                includes advanced features like trigonometric functions,
+                logarithms, and exponential calculations, showcasing my
+                programming skills and ability to create practical applications.
+              </p>
+              <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
           </div>
-          <div>
-            <i class="fa-solid fa-gears"></i>
-            <h2>API development</h2>
-            <p>
-              I am proficient in developing and maintaining APIs for web
-              applications. I can implement RESTful APIs using Node.js,
-              Express.js, and other technologies to enable seamless
-              communication between front-end and back-end components.
-            </p>
-            <a href="#">Learn more</a>
+          <div class="work">
+            <img src="/assets/images/work-2.png" alt="" />
+            <div class="layer">
+              <h3>Flipkart Home Page design</h3>
+              <p>
+                I have designed a replica of the Flipkart homepage using HTML
+                and CSS. This project demonstrates my proficiency in front-end
+                web development and showcases my ability to create visually
+                appealing and functional user interfaces.
+              </p>
+              <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
           </div>
-          <div>
-            <i class="fa-solid fa-screwdriver-wrench"></i>
-            <h2>Maintenance and support</h2>
-            <p>
-              I can provide ongoing maintenance and support for web
-              applications, including fixing bugs, adding new features, and
-              addressing security concerns. I can work closely with clients to
-              ensure their applications are running smoothly and efficiently.
-            </p>
-            <a href="#">Learn more</a>
+          <div class="work">
+            <img src="/assets/images/work-3.png" alt="" />
+            <div class="layer">
+              <h3>Node Farm</h3>
+              <p>
+                My Node Farm project is a web application built with Node.js
+                that enables users to view and manage a farm's inventory of
+                products. This project showcases my skills in back-end web
+                development, including building a RESTful API, implementing CRUD
+                operations, and using middleware for authentication and error
+                handling.
+              </p>
+              <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- <section class="portfolio">
-      <div class="portfolio-title">My Work</div>
-      <div class="container">
-        <div class="work-list"></div>
-      </div>
-    </section> -->
     <section id="testimonials">
-      <div class="slide-container swiper">
-        <div class="slide-content">
-          <div class="card-wrapper swiper-wrapper">
-            <div class="card swiper-slide">
-              <div class="image-content">
-                <span class="overlay"></span>
+      <div class="section-title">Testimonials</div>
+      <div class="container">
+        <div class="slide-container swiper">
+          <div class="slide-content">
+            <div class="card-wrapper swiper-wrapper">
+              <div class="card swiper-slide">
+                <div class="image-content">
+                  <span class="overlay"></span>
 
-                <div class="card-image">
-                  <img
-                    src="/assets/images/profile1.jpg"
-                    alt=""
-                    class="card-img"
-                  />
+                  <div class="card-image">
+                    <img
+                      src="/assets/images/profile1.jpg"
+                      alt=""
+                      class="card-img"
+                    />
+                  </div>
+                </div>
+
+                <div class="card-content">
+                  <h2 class="name">David Dell</h2>
+                  <p class="description">
+                    The lorem text the section that contains header with having
+                    open functionality. Lorem dolor sit amet consectetur
+                    adipisicing elit.
+                  </p>
                 </div>
               </div>
+              <div class="card swiper-slide">
+                <div class="image-content">
+                  <span class="overlay"></span>
 
-              <div class="card-content">
-                <h2 class="name">David Dell</h2>
-                <p class="description">
-                  The lorem text the section that contains header with having
-                  open functionality. Lorem dolor sit amet consectetur
-                  adipisicing elit.
-                </p>
-              </div>
-            </div>
-            <div class="card swiper-slide">
-              <div class="image-content">
-                <span class="overlay"></span>
+                  <div class="card-image">
+                    <img
+                      src="/assets/images/profile2.jpg"
+                      alt=""
+                      class="card-img"
+                    />
+                  </div>
+                </div>
 
-                <div class="card-image">
-                  <img
-                    src="/assets/images/profile2.jpg"
-                    alt=""
-                    class="card-img"
-                  />
+                <div class="card-content">
+                  <h2 class="name">David Dell</h2>
+                  <p class="description">
+                    The lorem text the section that contains header with having
+                    open functionality. Lorem dolor sit amet consectetur
+                    adipisicing elit.
+                  </p>
                 </div>
               </div>
+              <div class="card swiper-slide">
+                <div class="image-content">
+                  <span class="overlay"></span>
 
-              <div class="card-content">
-                <h2 class="name">David Dell</h2>
-                <p class="description">
-                  The lorem text the section that contains header with having
-                  open functionality. Lorem dolor sit amet consectetur
-                  adipisicing elit.
-                </p>
-              </div>
-            </div>
-            <div class="card swiper-slide">
-              <div class="image-content">
-                <span class="overlay"></span>
+                  <div class="card-image">
+                    <img
+                      src="/assets/images/profile3.jpg"
+                      alt=""
+                      class="card-img"
+                    />
+                  </div>
+                </div>
 
-                <div class="card-image">
-                  <img
-                    src="/assets/images/profile3.jpg"
-                    alt=""
-                    class="card-img"
-                  />
+                <div class="card-content">
+                  <h2 class="name">David Dell</h2>
+                  <p class="description">
+                    The lorem text the section that contains header with having
+                    open functionality. Lorem dolor sit amet consectetur
+                    adipisicing elit.
+                  </p>
                 </div>
               </div>
+              <div class="card swiper-slide">
+                <div class="image-content">
+                  <span class="overlay"></span>
 
-              <div class="card-content">
-                <h2 class="name">David Dell</h2>
-                <p class="description">
-                  The lorem text the section that contains header with having
-                  open functionality. Lorem dolor sit amet consectetur
-                  adipisicing elit.
-                </p>
-              </div>
-            </div>
-            <div class="card swiper-slide">
-              <div class="image-content">
-                <span class="overlay"></span>
+                  <div class="card-image">
+                    <img
+                      src="/assets/images/profile4.jpg"
+                      alt=""
+                      class="card-img"
+                    />
+                  </div>
+                </div>
 
-                <div class="card-image">
-                  <img
-                    src="/assets/images/profile4.jpg"
-                    alt=""
-                    class="card-img"
-                  />
+                <div class="card-content">
+                  <h2 class="name">David Dell</h2>
+                  <p class="description">
+                    The lorem text the section that contains header with having
+                    open functionality. Lorem dolor sit amet consectetur
+                    adipisicing elit.
+                  </p>
                 </div>
               </div>
+              <div class="card swiper-slide">
+                <div class="image-content">
+                  <span class="overlay"></span>
 
-              <div class="card-content">
-                <h2 class="name">David Dell</h2>
-                <p class="description">
-                  The lorem text the section that contains header with having
-                  open functionality. Lorem dolor sit amet consectetur
-                  adipisicing elit.
-                </p>
-              </div>
-            </div>
-            <div class="card swiper-slide">
-              <div class="image-content">
-                <span class="overlay"></span>
+                  <div class="card-image">
+                    <img
+                      src="/assets/images/profile5.jpg"
+                      alt=""
+                      class="card-img"
+                    />
+                  </div>
+                </div>
 
-                <div class="card-image">
-                  <img
-                    src="/assets/images/profile5.jpg"
-                    alt=""
-                    class="card-img"
-                  />
+                <div class="card-content">
+                  <h2 class="name">David Dell</h2>
+                  <p class="description">
+                    The lorem text the section that contains header with having
+                    open functionality. Lorem dolor sit amet consectetur
+                    adipisicing elit.
+                  </p>
                 </div>
               </div>
+              <div class="card swiper-slide">
+                <div class="image-content">
+                  <span class="overlay"></span>
 
-              <div class="card-content">
-                <h2 class="name">David Dell</h2>
-                <p class="description">
-                  The lorem text the section that contains header with having
-                  open functionality. Lorem dolor sit amet consectetur
-                  adipisicing elit.
-                </p>
-              </div>
-            </div>
-            <div class="card swiper-slide">
-              <div class="image-content">
-                <span class="overlay"></span>
-
-                <div class="card-image">
-                  <img
-                    src="/assets/images/profile6.jpg"
-                    alt=""
-                    class="card-img"
-                  />
+                  <div class="card-image">
+                    <img
+                      src="/assets/images/profile6.jpg"
+                      alt=""
+                      class="card-img"
+                    />
+                  </div>
                 </div>
-              </div>
 
-              <div class="card-content">
-                <h2 class="name">David Dell</h2>
-                <p class="description">
-                  The lorem text the section that contains header with having
-                  open functionality. Lorem dolor sit amet consectetur
-                  adipisicing elit.
-                </p>
+                <div class="card-content">
+                  <h2 class="name">David Dell</h2>
+                  <p class="description">
+                    The lorem text the section that contains header with having
+                    open functionality. Lorem dolor sit amet consectetur
+                    adipisicing elit.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
-        <div class="swiper-button-next swiper-navBtn"></div>
-        <div class="swiper-button-prev swiper-navBtn"></div>
-        <div class="swiper-pagination"></div>
+          <div class="swiper-button-next swiper-navBtn"></div>
+          <div class="swiper-button-prev swiper-navBtn"></div>
+          <div class="swiper-pagination"></div>
+        </div>
       </div>
     </section>
 
